# simple_server_for_query

./: CMakeLists.txt  README.md  getauth.sh  index.html  server.c  server.cpp
